unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/sked_Staffing_Budget_Availability__c.object-meta.xml
<CustomObject>
    <description>Junction Object for Staffing Budgets/Availabilities</description>
    <label>Staffing Budget Availability</label>
    <nameField>
        <label>Staffing Budget Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffing Budget Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>