unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/fields/sked_Availability__c.field-meta.xml
<CustomField>
    <fullName>sked_Availability__c</fullName>
    <label>Availability</label>
    <referenceTo>sked__Availability__c</referenceTo>
    <relationshipLabel>Staffing Budget Availabilities</relationshipLabel>
    <relationshipName>sked_Staffing_Budget_Availabilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>