unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/fields/sked_Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Availability_Status__c</fullName>
    <label>Availability Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>