unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/fields/sked_Created_Inside_Bidding_Period__c.field-meta.xml
<CustomField>
    <fullName>sked_Created_Inside_Bidding_Period__c</fullName>
    <formula>sked_Staffing_Budget__r.sked_Bidding_Start_Date__c &lt;= DATEVALUE(CreatedDate) &amp;&amp; DATEVALUE(CreatedDate) &lt;= sked_Staffing_Budget__r.sked_Bidding_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Inside Bidding Period</label>
    <type>Checkbox</type>
</CustomField>