unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/fields/sked_SBA_Date_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>sked_SBA_Date_Mismatch__c</fullName>
    <formula>sked_Staffing_Budget__r.sked_Staffing_Budget_Date__c != sked_Availability__r.sked_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBA Date Mismatch</label>
    <type>Checkbox</type>
</CustomField>