unpackaged/main/default/objects/sked_Staffing_Budget_Availability__c/fields/sked_Staffing_Budget__c.field-meta.xml
<CustomField>
    <fullName>sked_Staffing_Budget__c</fullName>
    <label>Staffing Budget</label>
    <referenceTo>sked_Staffing_Budget__c</referenceTo>
    <relationshipLabel>Staffing Budget Availabilities</relationshipLabel>
    <relationshipName>sked_Staffing_Budget_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>